tenants/openbao/openbao-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openbao
  namespace: openbao
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
    - host: openbao.manhattan.uxn.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openbao-deployment
                port:
                  number: 8200
  tls:
    - hosts:
        - openbao.manhattan.uxn.nl
      secretName: openbao-tls-secret
